# era

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile_MOD  Makefile_RISCV  README.md  compile-era.sh  cv_root_post_extraction.dot  epochERARun.sh  era.rosinstall  era_ros.rosinstall  fuse_maps_post_extraction.dot  launch_era.py  lidar_root_post_extraction.dot  predict.py  yolo.py
for_esp/: CMakeLists.txt  Makefile  Makefile.base  dot.config  dot.config.local  make_hw_tests.sh  make_timing_versions.sh
mini-era/: CMakeLists.txt
mini-era/FasterRCNN/keras-fasterRCNN/: bdd_json_to_txt.py  try.json
mini-era/Viterbi/: Makefile  viterbi_decoder_generic.c
mini-era/costmap/: CMakeLists.txt
mini-era/costmap/include/: costmap.hpp
mini-era/costmap/src/: costmap.cpp
mini-era/cv/cnn/: MNistDoc.c  MNistDoc.h  Preferences.h  README  main.c  makefile  mnist_parse.h
mini-era/cv/cnn2/: MNistDoc.c  MNistDoc.h  Makefile  NeuralNetwork.c  NeuralNetwork.h  Preferences.c  README  main.c  mnist_parse.c  run.sh  vector.c  vector.h
mini-era/cv/common/: calcSobel_dX.c  calcSobel_dY.c  fDeepCopy.c  fDeepCopyRange.c  fDivide.c  fFind3.c  fFreeHandle.c  fHorzcat.c  fMallocHandle.c  fMdivide.c  fMinus.c  fMtimes.c  fPlus.c  fReshape.c  fSelfCheck.c  fSetArray.c  fSort.c  fSortIndices.c  fSum.c  fSum2.c  fTimes.c  fTranspose.c  fWriteMatrix.c  ffConv2.c  ffConv2_dY.c  ffDivide.c  ffTimes.c  ffVertcat.c  ffiConv2.c  fiConv2.c  fiDeepCopy.c  horzcat.c  iDeepCopy.c  iDeepCopyRange.c  iFreeHandle.c  iHorzcat.c  iMallocHandle.c  iMinus.c  iReshape.c  iSetArray.c  (+27 more)
mini-era/cv/common/makefiles/: Makefile.common  Makefile.include  Makefile.recurse
mini-era/cv/keras_cnn/: README  gtsrb.py  gtsrb_data.py  lenet.py
mini-era/cv/sift/: Makefile  sift
mini-era/cv/sift/data/fullhd/: Makefile  expected.m  expected_C.txt  out  sift
mini-era/cv/sift/src/: diffss.c  doubleSize.c  filterBoundaryPoints.c  gaussianss.c  halveSize.c  imsmooth.c  script_sift.c  sift.c  sift.h  siftlocalmax.c  siftrefinemx.c
mini-era/cv/stitch/: Makefile  stitch
mini-era/cv/stitch/data/fullhd/: Makefile  expected_C.txt  stitch
mini-era/cv/stitch/src/: dist2.c  extractFeatures.c  getANMS.c  harris.c  matchFeatures.c  maxWindow.c  script_stitch.c  stitch.h  supress.c
mini-era/cv/svm/: Makefile
mini-era/cv/svm/src/c/: cal_learned_func.c  examineExample.c  getAlphaFromTrainSet.c  polynomial.c  script_svm.c  svm.h  takeStep.c  usps_read_partial.c
mini-era/cv/svm/src/matlab/: Makefile.include  cal_learned_func.m  d16trn_1.m  d16trn_2.m  d16tst_1.m  d16tst_2.m  examineExample.m  getAlphaFromTrainSet.m  polynomial.m  randWrapper.m  readMatrix.m  readSVM.m  script_run_profile.m  selfCheck.m  takeStep.m  usps_read_partial.m
mini-era/fft/: .gitignore  Makefile  README.md  main  main.c
mini-era/fft/fft-1d/: Makefile  fft-1d.h  fft.c  main.c  octave.c
mini-era/fft/fft-2d/: fft-2d.h  fft.c  main.c  octave.c  timer.h
mini-era/fft/fftw-3.3.8/: FFTW3fConfig.cmake  Makefile  config.h  config.status  fftw3.pc  fftw3f.pc  libfftw3.la  libfftw3f.la  libtool
mini-era/fft/fftw-3.3.8/api/: Makefile
mini-era/fft/fftw-3.3.8/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mkprinter-str.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-dft.Plo  (+26 more)
mini-era/fft/fftw-3.3.8/dft/: Makefile
mini-era/fft/fftw-3.3.8/dft/.deps/: bluestein.Plo  buffered.Plo  conf.Plo  ct.Plo  dftw-direct.Plo  dftw-directsq.Plo  dftw-generic.Plo  dftw-genericbuf.Plo  direct.Plo  generic.Plo  (+14 more)
mini-era/fft/fftw-3.3.8/doc/: Makefile
mini-era/fft/fftw-3.3.8/genfft/: Makefile
mini-era/fft/fftw-3.3.8/kernel/: Makefile
mini-era/fft/fftw-3.3.8/lib/: libfftw3.la  libfftw3f.la
mini-era/fft/fftw-3.3.8/libbench2/: Makefile
mini-era/fft/fftw-3.3.8/m4/: Makefile
mini-era/fft/fftw-3.3.8/mpi/: Makefile
mini-era/fft/fftw-3.3.8/rdft/: Makefile
mini-era/fft/fftw-3.3.8/reodft/: Makefile
mini-era/fft/fftw-3.3.8/simd-support/: Makefile
mini-era/fft/fftw-3.3.8/support/: Makefile
mini-era/fft/fftw-3.3.8/tests/: Makefile  bench
mini-era/fft/fftw-3.3.8/threads/: Makefile
mini-era/fft/fftw-3.3.8/tools/: Makefile
mini-era/object_detection/: CMakeLists.txt
mini-era/object_detection/include/: object_detection.hpp
mini-era/object_detection/src/: object_detection.cpp  utils.cpp
mini-era/radar/: .gitignore  Makefile  README.md  calculate_dist_from_fmcw.c  calculate_dist_from_fmcw.py  fmcw_functions.py  generate_fmcw_waveform.py
mini-era/src/: mini_era.cpp
mini-era/viterbi/: Makefile  README.md  base.h  descrambler_function.c  test.c  viterbi_decoder_generic.c  viterbi_flat.c  viterbi_flat.h  viterbi_test.c
mini-era/viterbi/sample_results/: viterbi_sample_result_linux.txt
mini-era/viterbi/test_config/: enc0.txt  enc1.txt  enc6.txt
mini-era/viterbi/utils/: README_enc.md  check_in_v_out.pl  enc6.txt
mini-era/viterbi/viterbi_test_config/: Makefile  README.md  descrambler_function.c  viterbi_decoder_generic.c  viterbi_decoder_generic.h  viterbi_test.c
mini-era/viterbi/viterbi_test_config/configurations/: enc0.txt  enc0_text.txt  enc1_text.txt  enc2_text.txt  enc3_text.txt  enc4_text.txt  enc5_text.txt  enc6_text.txt  enc7_text.txt
mini-era/viterbi/viterbi_test_config/sample_results/: viterbi_sample_result_linux.txt  viterbi_sample_result_windows.txt
mini_era/costmap/: CMakeLists.txt
mini_era/costmap/include/: costmap.hpp
mini_era/costmap/src/: costmap.cpp
(+563 files in other folders)
